@@ -1,7 +1,6 @@
 /******************************************************************************
- *  utilfuns.h	- utility function prototypes
  *
- * $Id: utilfuns.h,v 1.2 2003/06/01 14:32:09 joachim Exp $
+ * $Id: thmlwebif.h,v 1.1 2003/06/01 14:32:09 joachim Exp $
  *
  * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
  *	CrossWire Bible Society
@@ -18,12 +17,25 @@
  * General Public License for more details.
  *
  */
-#ifndef UTILFUNS_H
-#define UTILFUNS_H
 
+#ifndef _ThMLWEBIF_H
+#define _ThMLWEBIF_H
 
-#include <utilstr.h>
-#include <utilconf.h>
-#include <utilweb.h>
+#include <thmlhtmlhref.h>
+#include <string>
 
-#endif
+SWORD_NAMESPACE_START
+
+/** this filter converts ThML text to HTML text with hrefs
+ */
+class SWDLLEXPORT ThMLWEBIF : public ThMLHTMLHREF {
+	const std::string baseURL;
+	const std::string passageStudyURL;
+
+protected:
+	virtual bool handleToken(SWBuf &buf, const char *token, DualStringMap &userData);
+public:
+	ThMLWEBIF();
+};
+SWORD_NAMESPACE_END
+#endif /* _ThMLWEBIF_H */
